syntax = "proto3";
option go_package = ".;protos";

message GOFramework{
  BeegoVersions beego = 1;
  GinVersions gin = 2;
}
enum BeegoVersions{
  Beego_v_1 = 0;
  Beego_v_2 = 1;

}
enum GinVersions{
  Gin_v_2 = 0;
  Gin_v_3 = 1;
}
